# customer-churn-mlops-service

./: .gitignore  Makefile  README.md  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: build.yml  ci.yml  delivery.yml  deploy.yml  release.yml
api/: main.py  schemas.py
api-service/: main.py  schemas.py
api/api_service/: main.py
api/artifacts/models/: metadata.json
api/training/: train.py
infra/terraform/: locals.tf  main.tf  variables.tf  versions.tf
models/: metrics.json  model.pkl
monitoring/: docker-compose.yml
monitoring/prometheus/: prometheus.yml
tests/: test_api.py  test_training.py
training/: train.py
